lager-lang/examples/good/12-01-static-types.lg
int main() {
    int x = 5;
    int f() {
        return x;
    }
    
    string x = "abc";
    
    print(f()); // 5
    
    return 0;
}
