lager-lang/examples/bad/wrong-type.lg
int f(int x) {
    return x;
}

int main() {
    print(f("abc")); // compile error
    
    return 0;
}
